--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongod": "^2.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
