--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongod": "^2.0.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
   }
 }
